// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TakeList prints More component on mouse enter 1`] = `
<styled.div
  mouseOver={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Styled(styled.div)
    className="take-button"
    isActive={true}
    key="4c92e8b3-9456-4d8b-aec4-2d23b9bbaaff"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Styled(styled.span)>
      with ride cymbal
    </Styled(styled.span)>
    <TakeContextMenu
      takeId="4c92e8b3-9456-4d8b-aec4-2d23b9bbaaff"
    >
      <styled.div
        onClick={[Function]}
      >
        <More />
      </styled.div>
    </TakeContextMenu>
  </Styled(styled.div)>
  <Styled(styled.div)
    className="take-button"
    isActive={false}
    key="7599b9e5-6055-4917-b183-e59bd4ec429e"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Styled(styled.span)>
      with hihat
    </Styled(styled.span)>
  </Styled(styled.div)>
  <label
    htmlFor="take-upload-116c2e4e-ea34-49d7-8a2a-9b2da03d7048"
  >
    <Styled(styled.div)>
      <Styled(Styled(styled.span))>
        + Upload
      </Styled(Styled(styled.span))>
    </Styled(styled.div)>
  </label>
  <input
    accept="audio/*"
    id="take-upload-116c2e4e-ea34-49d7-8a2a-9b2da03d7048"
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</styled.div>
`;

exports[`TakeList should match the snapshot 1`] = `
<styled.div
  mouseOver={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Styled(styled.div)
    className="take-button"
    isActive={true}
    key="4c92e8b3-9456-4d8b-aec4-2d23b9bbaaff"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Styled(styled.span)>
      with ride cymbal
    </Styled(styled.span)>
  </Styled(styled.div)>
  <Styled(styled.div)
    className="take-button"
    isActive={false}
    key="7599b9e5-6055-4917-b183-e59bd4ec429e"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Styled(styled.span)>
      with hihat
    </Styled(styled.span)>
  </Styled(styled.div)>
  <label
    htmlFor="take-upload-116c2e4e-ea34-49d7-8a2a-9b2da03d7048"
  >
    <Styled(styled.div)>
      <Styled(Styled(styled.span))>
        + Upload
      </Styled(Styled(styled.span))>
    </Styled(styled.div)>
  </label>
  <input
    accept="audio/*"
    id="take-upload-116c2e4e-ea34-49d7-8a2a-9b2da03d7048"
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</styled.div>
`;
